--- a/Magento_Contact/layout/contact_index_index.xml
+++ b/Magento_Contact/layout/contact_index_index.xml
@@ -19,5 +19,13 @@
                 <block name="contactDetails" as="contact.details" template="Magento_Contact::form/contact-details.phtml" />
             </block>
         </referenceContainer>
+
+        <referenceBlock name="topmenu_generic">
+            <!-- Disable block_html caching on the un-cached contact page, because the top menu is shared with cached pages. -->
+            <!-- Otherwise the script tags will be used on FPC pages with (wrong) nonce attribute values, while they should be enabled through shas there. -->
+            <arguments>
+                <argument name="cache_lifetime" xsi:type="boolean">false</argument>
+            </arguments>
+        </referenceBlock>
     </body>
 </page>
