--- a/Magento_Customer/templates/form/resetforgottenpassword.phtml
+++ b/Magento_Customer/templates/form/resetforgottenpassword.phtml
@@ -10,17 +10,54 @@ declare(strict_types=1);
 
 use Hyva\Theme\Model\ViewModelRegistry;
 use Hyva\Theme\ViewModel\HeroiconsSolid;
+use Hyva\Theme\ViewModel\HyvaCsp;
 use Magento\Customer\Block\Account\Resetpassword;
 use Magento\Framework\Escaper;
 
 /** @var Resetpassword $block */
 /** @var Escaper $escaper */
 /** @var ViewModelRegistry $viewModels */
+/** @var HyvaCsp $hyvaCsp */
 
 $heroicons = $viewModels->require(HeroiconsSolid::class);
 $minimumPasswordLength = $block->getMinimumPasswordLength();
 $passwordMinCharacterSets = $block->getRequiredCharacterClassesNumber();
 ?>
+<script>
+    function initResetPasswordForm() {
+        return Object.assign(
+            hyva.formValidation(this.$el),
+            hyva.createBooleanObject('showPassword', false, {
+                passwordFieldType() {
+                    return this.showPassword() ? 'text' : 'password';
+                },
+                toggleShowPasswordAriaLabel() {
+                    return this.showPassword()
+                        ? '<?= $escaper->escapeJs(__('Hide Password')) ?>'
+                        : '<?= $escaper->escapeJs(__('Show Password')) ?>';
+                }
+            }),
+            hyva.createBooleanObject('showPasswordConfirm', false, {
+                passwordConfirmFieldType() {
+                    return this.showPasswordConfirm() ? 'text' : 'password';
+                },
+                toggleShowConfirmPasswordAriaLabel() {
+                    return this.showPasswordConfirm()
+                        ? '<?= $escaper->escapeJs(__('Hide Password')) ?>'
+                        : '<?= $escaper->escapeJs(__('Show Password')) ?>'
+                }
+            })
+        )
+    }
+    (() => {
+        const initFn = () => Alpine.data('initResetPasswordForm', initResetPasswordForm);
+        window.Alpine
+            ? initFn()
+            : window.addEventListener('alpine:init', initFn, {once: true})
+    })()
+
+</script>
+<?php $hyvaCsp->registerInlineScript() ?>
 <div class="container mb-12">
     <div class="w-full md:w-1/2 card my-8">
         <form action="<?= $escaper->escapeUrl(
@@ -29,7 +66,7 @@ $passwordMinCharacterSets = $block->getRequiredCharacterClassesNumber();
                 ['_query' => ['id' => $block->getRpCustomerId(), 'token' => $block->getResetPasswordLinkToken()]]
             )
         ) ?>"
-              x-data="Object.assign(hyva.formValidation($el), {showPassword: false, showPasswordConfirm: false})"
+              x-data="initResetPasswordForm"
               @submit="onSubmit"
               method="post"
               id="form-validate"
@@ -41,16 +78,16 @@ $passwordMinCharacterSets = $block->getRequiredCharacterClassesNumber();
                         <span><?= $escaper->escapeHtml(__('New Password')) ?></span>
                     </label>
                     <div class="control flex items-center">
-                        <input :type="showPassword ? 'text' : 'password'" type="password"
+                        <input :type="passwordFieldType" type="password"
                                class="form-input" name="password" id="password" required
                                minlength="<?= $escaper->escapeHtmlAttr($minimumPasswordLength) ?>"
                                @input="onChange"
                                data-validate='{"password-strength": {"minCharacterSets": <?= (int) $passwordMinCharacterSets ?>}}'
                                autocomplete="<?= $block->isAutocompleteDisabled() ? 'off' : 'new-password' ?>"
                         />
-                        <div x-on:click="showPassword = !showPassword"
+                        <div @click="toggleShowPassword"
                              class="cursor-pointer px-4"
-                             :aria-label="showPassword ? '<?= $escaper->escapeJs(__('Hide Password')) ?>' : '<?= $escaper->escapeJs(__('Show Password')) ?>'"
+                             :aria-label="toggleShowPasswordAriaLabel"
                         >
                             <template x-if="!showPassword">
                                 <?= $heroicons->eyeHtml('w-5 h-5'); ?>
@@ -66,16 +103,16 @@ $passwordMinCharacterSets = $block->getRequiredCharacterClassesNumber();
                         <span><?= $escaper->escapeHtml(__('Confirm New Password')) ?></span>
                     </label>
                     <div class="control flex items-center">
-                        <input :type="showPasswordConfirm ? 'text' : 'password'" type="password"
+                        <input :type="passwordConfirmFieldType" type="password"
                                class="form-input" name="password_confirmation"
                                id="password-confirmation"
                                data-validate='{"equalTo": "password"}'
                                @input="onChange"
                                autocomplete="<?= $block->isAutocompleteDisabled() ? 'off' : 'new-password' ?>"
                         />
-                        <div x-on:click="showPasswordConfirm = !showPasswordConfirm"
+                        <div @click="toggleShowPasswordConfirm"
                              class="cursor-pointer px-4"
-                             :aria-label="showPasswordConfirm ? '<?= $escaper->escapeJs(__('Hide Password')) ?>' : '<?= $escaper->escapeJs(__('Show Password')) ?>'"
+                             :aria-label="toggleShowConfirmPasswordAriaLabel"
                         >
                             <template x-if="!showPasswordConfirm">
                                 <?= $heroicons->eyeHtml('w-5 h-5'); ?>
