--- a/Magento_Checkout/templates/php-cart/totals/subtotal.phtml
+++ b/Magento_Checkout/templates/php-cart/totals/subtotal.phtml
@@ -5,36 +5,16 @@
  * This product is licensed per Magento install
  * See https://hyva.io/license
  */
-
-use Hyva\Theme\ViewModel\HyvaCsp;
-
-/** @var HyvaCsp $hyvaCsp */
-
-/**
- * The AlpineJS scope of this file is the method `initCartTotals()` in Magento_Checkout::php-cart/totals.phtml
- */
 ?>
-<script>
-    function initShippingTotalSegment() {
-        return {
-            isShippingTotal() {
-                return this.segment.code === 'shipping' && this.quoteData.is_virtual === 0 && !!this.shippingMethod;
-            }
-            formatShippingTotal() {
-                return hyva.formatPrice(this.segment.value);
-            }
-        };
-    }
-    window.addEventListener('alpine:init', () => Alpine.data('initShippingTotalSegment', initShippingTotalSegment), {once: true})
-</script>
-<?php $hyvaCsp->registerInlineScript() ?>
-<template x-if="isShippingTotal">
+<div x-data="initSubtotalSegment">
+<template x-if="isSubtotal">
     <div class="flex pb-2 my-2 border-b text-md lg:text-sm md:grid md:grid-cols-2 md:w-full border-container">
         <div class="w-7/12 text-left md:w-auto"
              x-html="segment.title"
         ></div>
         <div class="w-5/12 text-right md:w-auto"
-             x-text="formatShippingTotal"
+             x-text="hyva.formatSubtotal"
         ></div>
     </div>
 </template>
+</div>
