Fix paypal in-context button on the cart page

--- a/Magento_Paypal/templates/express/in-context/shortcut/button-js.phtml
+++ b/Magento_Paypal/templates/express/in-context/shortcut/button-js.phtml
@@ -18,12 +18,10 @@ use Magento\Paypal\Block\Express\InContext\Minicart\SmartButton;
 
 /*
  * This template renders the JS for the PayPal in-context shortcut button for the mini-cart and the cart.
+ * The related HTML can be found in Magento_Paypal/templates/express/in-context/shortcut/button.phtml
  */
 
-for ($candidate = $block, $isCartPage = false; $candidate && ! $isCartPage; $candidate = $candidate->getParentBlock()) {
-    $isCartPage = $candidate->getNameInLayout() === 'checkout.cart.shortcut.buttons';
-}
-$isMinicart = ! $isCartPage;
+$isCartPage = in_array('checkout_cart_index', $block->getLayout()->getUpdate()->getHandles(), true);
 
 ?>
 <script>
@@ -39,11 +37,9 @@ $isMinicart = ! $isCartPage;
             getData(sectionData) {
                 this.cartSection = sectionData.cart;
             },
-            <?php if ($isMinicart): ?>
             initMiniCartButtons() {
                 this.cartSection = this.cart;
             },
-            <?php endif; ?>
             <?php if ($isCartPage): ?>
             initCartPageButtons() {
                 this.getData(this.$event.detail.data);
