--- a/Magento_Checkout/layout/checkout_cart_index.xml
+++ b/Magento_Checkout/layout/checkout_cart_index.xml
@@ -91,6 +91,7 @@
                         </block>
                     </container>
 
+                    <block name="checkout-cart-loading" as="loading" template="Hyva_Theme::ui/loading.phtml"/>
                 </container>
 
                 <container name="checkout.cart.noitems" as="no-items">
