#1052 Apply changes from commit d957747ee705ae5224f298eb305058ed13436b5e (fix: remove untranslated SVG title elements and add aria-hidden attribute for A11Y)

--- a/Magento_Downloadable/templates/product/view/samples.phtml
+++ b/Magento_Downloadable/templates/product/view/samples.phtml
@@ -34,8 +34,9 @@ $heroicons = $viewModels->require(HeroiconsOutline::class);
             <div class="block w-full text-left text-gray-700 mb-2">
                 <a href="<?= $escaper->escapeHtml($block->getSampleUrl($sample)) ?>"
                    download
-                   class="item-link samples-item-link">
-                    <?= $heroicons->documentDownloadHtml(); ?>
+                   class="item-link samples-item-link"
+                >
+                    <?= $heroicons->documentDownloadHtml('', 24, 24, ['aria-hidden' => true]); ?>
                     <?= $escaper->escapeHtml($sample->getTitle()) ?>
                 </a>
             </div>
