--- a/Magento_Customer/templates/address/grid.phtml
+++ b/Magento_Customer/templates/address/grid.phtml
@@ -67,7 +67,7 @@ $heroicons = $viewModels->require(HeroiconsOutline::class);
                                 'customer/address/edit',
                                 ['id' => $address->getId()]
                             )) ?>">
-                            <?= $heroicons->pencilAltHtml(); ?>
+                            <?= $heroicons->pencilAltHtml('', 24, 24, ['aria-hidden' => true]); ?>
                             <span></span>
                         </a>
                         <a class="action delete ml-2 inline-block text-sm underline text-secondary-darker"
@@ -75,7 +75,7 @@ $heroicons = $viewModels->require(HeroiconsOutline::class);
                            @click.prevent="deleteAddressById"
                            data-address-id="<?= $escaper->escapeJs($address->getId()) ?>"
                            href="#">
-                            <?= $heroicons->trashHtml(); ?>
+                            <?= $heroicons->trashHtml('', 24, 24, ['aria-hidden' => true]); ?>
                         </a>
                     </div>
                 <?php endforeach; ?>
