--- a/Magento_Catalog/templates/product/slider/product-slider-container.phtml
+++ b/Magento_Catalog/templates/product/slider/product-slider-container.phtml
@@ -78,7 +78,7 @@ if ($isSharedItemRenderer && $block->getChildBlock('slider.item.template')) {
 $maxVisibleSlides = $block->getData('max_visible') ?? 4;
 
 // Breakpoints for 1 visible slider items on mobile, 2 visible on md, 3 on lg and 4 on xl (see $sliderPageSize).
-$defaultSliderItemClasses = 'p-1 md:w-1/2 lg:w-1/3 xl:w-1/4';
+$defaultSliderItemClasses = 'md:w-1/2 lg:w-1/3 xl:w-1/4'';
 
 $sliderSectionClasses = $block->getData('maybe_purged_tailwind_section_classes') ?? 'my-12 text-gray-700 body-font';
 $slideItemClasses = $block->getData('maybe_purged_tailwind_slide_item_classes') ?? $defaultSliderItemClasses;
@@ -224,7 +224,7 @@ $slideItemClasses = $block->getData('maybe_purged_tailwind_slide_item_classes') 
     x-defer="intersect"
 >
     <?php if ($items): ?>
-        <div class="relative -mx-1">
+        <div class="relative">
             <?php if ($title): ?>
                 <div class="container flex flex-col items-center pt-6 pb-3 mx-auto mb-6 border-b-2
                     border-gray-300 md:flex-row">
@@ -255,12 +255,12 @@ $slideItemClasses = $block->getData('maybe_purged_tailwind_slide_item_classes') 
             >
                 <?= $escaper->escapeHtml(__('Press to go to carousel navigation')) ?>
             </button>
-            <div class="flex-none relative w-full overflow-x-hidden focus-within:ring-2 ring-offset-2 active:ring-0 ring-blue-500/50">
-                <div class="relative flex flex-nowrap w-full overflow-auto js_slides snap"
+            <div class="flex-none relative w-full focus-within:ring-2 ring-offset-2 active:ring-0 ring-blue-500/50">
+                <div class="relative flex flex-nowrap -mx-1 overflow-auto js_slides snap"
                      @scroll.debounce="calcActive"
                 >
                     <?php foreach ($items as $product): ?>
-                        <div class="js_slide flex flex-col shrink-0 w-full <?= $escaper->escapeHtmlAttr($slideItemClasses) ?>"
+                        <div class="js_slide flex flex-col shrink-0 w-full p-1 <?= $escaper->escapeHtmlAttr($slideItemClasses) ?>"
                              data-slider-index="<?= (int) $sliderIndex ?>"
                              data-product-id="<?= $escaper->escapeHtmlAttr($product->getId()) ?>"
                              role="group"
