#1137 Apply changes from commit 5c904ebf6123a91da3599f4e3691bc437f9748e7 (FIX: aria warnings by using the right tag for the job)

--- a/Magento_Catalog/templates/product/slider/product-slider-container.phtml
+++ b/Magento_Catalog/templates/product/slider/product-slider-container.phtml
@@ -264,7 +264,7 @@ $slideItemClasses = $block->getData('maybe_purged_tailwind_slide_item_classes') 
                              data-slider-index="<?= (int) $sliderIndex ?>"
                              data-product-id="<?= $escaper->escapeHtmlAttr($product->getId()) ?>"
                              role="group"
-                             :aria-hidden="sliderItemAriaHidden"
+                             :inert="sliderItemAriaHidden"
                              aria-label="<?= $escaper->escapeHtmlAttr(__('Item %1', $sliderIndex++)) ?>"
                              :aria-describedby="sliderItemAriaDescribedById"
                         >
