#1180 Fix mistakes in header-search template after merging changes from main

--- a/Magento_Theme/templates/html/header/search-form.phtml
+++ b/Magento_Theme/templates/html/header/search-form.phtml
@@ -109,45 +109,46 @@ $searchConfig = $viewModels->require(SearchConfig::class);
     window.addEventListener('alpine:init', () => Alpine.data('initMiniSearch', initMiniSearch), {once: true})
 </script>
 <?php $hyvaCsp->registerInlineScript() ?>
-<button class="container py-2 mx-auto text-black" x-data="initMiniSearch">
+<div class="container py-2 mx-auto text-black" x-data="initMiniSearch">
     <search title="<?= $escaper->escapeHtmlAttr(__('Store')) ?>" role="search">
-    <form
-        id="search_mini_form"
-        class="form minisearch flex"
-        action="<?= $escaper->escapeUrl($helper->getResultUrl()) ?>"
-        method="get"
-        @submit.prevent="search"
-        x-ref="form"
-    >
-        <label class="sr-only" for="search">
-            <?= $escaper->escapeHtml(__('Search')) ?>
-        </label>
-        <input
-            id="search"
-            x-ref="searchInput"
-            type="search"
-            autocomplete="off"
-            name="<?= $escaper->escapeHtmlAttr($helper->getQueryParamName()) ?>"
-            value="<?= /** @noEscape */ $helper->getEscapedQueryText() ?>"
-            placeholder="<?= $escaper->escapeHtmlAttr(__('Search entire store here...')) ?>"
-            maxlength="<?= $escaper->escapeHtmlAttr($helper->getMaxQueryLength()) ?>"
-            class="w-full text-lg lg:text-xl text-grey-800 focus:border-transparent focus:outline-none rounded-l"
-            @search-open.window.debounce.10="focusAfterOpen"
-        <?php if ($searchConfig->isSuggestionsAllowed()): ?>
-            @focus.once="suggest"
-            @input.debounce.300="suggest"
-            @keydown.arrow-down.prevent="focusElement"
-        <?php endif ?>
+        <form
+            id="search_mini_form"
+            class="form minisearch flex"
+            action="<?= $escaper->escapeUrl($helper->getResultUrl()) ?>"
+            method="get"
+            @submit.prevent="search"
+            x-ref="form"
         >
-        <button
-            type="submit"
-            class="action search btn btn-primary rounded-l-none rounded-r shrink-0 p-3 shadow-none"
-            title="<?= $escaper->escapeHtmlAttr(__('Search')) ?>"
-            aria-label="<?= $escaper->escapeHtmlAttr(__('Search')) ?>"
-        >
-            <?= $heroicons->searchHtml('', 20, 20, ['aria-hidden' => 'true']); ?>
-        </button>
-    </form>
+            <label class="sr-only" for="search">
+                <?= $escaper->escapeHtml(__('Search')) ?>
+            </label>
+            <input
+                id="search"
+                x-ref="searchInput"
+                type="search"
+                autocomplete="off"
+                name="<?= $escaper->escapeHtmlAttr($helper->getQueryParamName()) ?>"
+                value="<?= /** @noEscape */ $helper->getEscapedQueryText() ?>"
+                placeholder="<?= $escaper->escapeHtmlAttr(__('Search entire store here...')) ?>"
+                maxlength="<?= $escaper->escapeHtmlAttr($helper->getMaxQueryLength()) ?>"
+                class="w-full text-lg lg:text-xl text-grey-800 focus:border-transparent focus:outline-none rounded-l"
+                @search-open.window.debounce.10="focusAfterOpen"
+            <?php if ($searchConfig->isSuggestionsAllowed()): ?>
+                @focus.once="suggest"
+                @input.debounce.300="suggest"
+                @keydown.arrow-down.prevent="focusElement"
+            <?php endif ?>
+            >
+            <button
+                type="submit"
+                class="action search btn btn-primary rounded-l-none rounded-r shrink-0 p-3 shadow-none"
+                title="<?= $escaper->escapeHtmlAttr(__('Search')) ?>"
+                aria-label="<?= $escaper->escapeHtmlAttr(__('Search')) ?>"
+            >
+                <?= $heroicons->searchHtml('', 20, 20, ['aria-hidden' => 'true']); ?>
+            </button>
+        </form>
+    </search>
     <?php if ($searchConfig->isSuggestionsAllowed()): ?>
     <template x-if="suggestions.length">
         <nav
@@ -169,5 +170,5 @@ $searchConfig = $viewModels->require(SearchConfig::class);
             </template>
         </nav>
     </template>
-        <?php endif ?>
+    <?php endif ?>
 </div>
