#1180 Fix bug after merging changes from 1.3.11

--- a/Magento_Checkout/templates/cart-main.phtml
+++ b/Magento_Checkout/templates/cart-main.phtml
@@ -78,9 +78,10 @@ $serializedCheckoutConfig =  $block->getItemsCount() ? $checkoutConfigViewModel-
                     );
                 }
             }).finally(() => {
-               window.dispatchEvent(new CustomEvent("cart-is-loading", { detail: {
-                   isLoading: false
-               }}));
+                window.dispatchEvent(new CustomEvent('cart-is-loading', {
+                    detail: {isLoading: false}
+                }))
+            })
         }
     }( window.hyva = window.hyva || {} ));
 
