#44 Make Login as Customer CSP compatible

--- a/Magento_LoginAsCustomerFrontendUi/templates/html/notices.phtml
+++ b/Magento_LoginAsCustomerFrontendUi/templates/html/notices.phtml
@@ -28,8 +28,8 @@ if (!$configurationViewModel->isEnabled()) {
 }
 ?>
 <div class="bg-gray-900"
-     x-data="initLoginAsCustomer()"
-     @private-content-loaded.window="receiveCustomerData(event.detail.data)"
+     x-data="initLoginAsCustomer"
+     @private-content-loaded.window="receiveCustomerData"
 >
     <div class="container mx-auto py-1 px-1 sm:px-6 lg:px-8" x-show="isVisible">
         <div class="flex items-center justify-between flex-wrap">
@@ -58,7 +58,8 @@ if (!$configurationViewModel->isEnabled()) {
             websiteName: null,
             fullname: null,
             notificationText: '',
-            receiveCustomerData: function receiveCustomerData(data) {
+            receiveCustomerData: function receiveCustomerData() {
+                const data = this.$event.detail.data
                 if (data.customer) {
                     this.fullname = data.customer.fullname;
                 }
@@ -83,5 +84,6 @@ if (!$configurationViewModel->isEnabled()) {
             }
         }
     }
+    window.addEventListener('alpine:init', () => Alpine.data('initLoginAsCustomer', initLoginAsCustomer), {once: true})
 </script>
 <?php $hyvaCsp->registerInlineScript() ?>
