#1 Add missing dropdown swatch data attribute

--- a/Magento_Swatches/templates/product/view/renderer.phtml
+++ b/Magento_Swatches/templates/product/view/renderer.phtml
@@ -112,7 +112,9 @@ $tooltipBlockHtml = $block->getBlockHtml('product.swatch.tooltip');
                         </template>
                     </div>
                 <?php else: ?>
-                    <div class="flex flex-col sm:flex-row items-center py-2 w-full border-t border-gray-300 last:border-b">
+                    <div class="flex flex-col sm:flex-row items-center py-2 w-full border-t border-gray-300 last:border-b"
+                         data-attribute-id="<?= (int) $attributeId ?>"
+                    >
                         <label class="w-full sm:w-1/2 text-left text-gray-700 label"
                                for="attribute<?= $escaper->escapeHtmlAttr($attributeId) ?>"
                         >
